syntax = "proto3";

package vault;

service Vault {
    // Get a vault and all the secrets inside
    rpc GetVault(GetVaultRequest) returns (GetVaultResponse);
    // Add secrets to a service account.
    rpc CreateSecrets(CreateSecretsRequest) returns (CreateSecretsResponse);
}

message Secret {
    string encrypted_name = 1;
    string encrypted_secret_value = 2;
}

message GetVaultRequest {
    uint32 vault_id = 1;
}

message GetVaultResponse {
    string name = 1;
    string encrypted_vault_key = 2;
    string vault_public_ecdh_key = 3;
    repeated Secret secrets = 4;
}

message CreateSecretsRequest {
    uint32 service_account_id = 1;
    repeated Secret secrets = 4;
}

message CreateSecretsResponse {
}